{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 45,
  "lineage": "70e8a299-18ed-9b1f-fced-28e9112b3964",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01d334aebd63c3997",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-142-8.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.142.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "stage",
              "Name": "terraform_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:497376193506:internet-gateway/igw-0e18483a93926f58d",
            "id": "igw-0e18483a93926f58d",
            "owner_id": "497376193506",
            "tags": {
              "Environment": "stage",
              "Name": "terraform_igw"
            },
            "vpc_id": "vpc-01ea2db41573db261"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d334aebd63c3997",
            "id": "nat-0ed5720d5febe13c0",
            "network_interface_id": "eni-08be69dff91893e01",
            "private_ip": "192.168.0.81",
            "public_ip": "3.6.142.8",
            "subnet_id": "subnet-0d9127414eef6eb46",
            "tags": {
              "Environment": "stage",
              "Name": "terraform_ngw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e968956480f067b0",
            "owner_id": "497376193506",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed5720d5febe13c0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "terraform_private_route"
            },
            "vpc_id": "vpc-01ea2db41573db261"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03dc43b8289f2e328",
            "owner_id": "497376193506",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e18483a93926f58d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "terraform_public_route"
            },
            "vpc_id": "vpc-01ea2db41573db261"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc49f499c89c6414",
            "route_table_id": "rtb-03dc43b8289f2e328",
            "subnet_id": "subnet-0ac154f087cb4f537"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_route",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030d12d27eab4b5d2",
            "route_table_id": "rtb-03dc43b8289f2e328",
            "subnet_id": "subnet-0b47dd2cc3549812a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_route",
            "aws_subnet.subnet3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074231e16254fe6e4",
            "route_table_id": "rtb-0e968956480f067b0",
            "subnet_id": "subnet-0d9127414eef6eb46"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv_route",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beb43595b634c634",
            "route_table_id": "rtb-0e968956480f067b0",
            "subnet_id": "subnet-0190e32320196d99e"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv_route",
            "aws_subnet.subnet2",
            "aws_subnet.subnet4",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:497376193506:subnet/subnet-0ac154f087cb4f537",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/26",
            "id": "subnet-0ac154f087cb4f537",
            "map_public_ip_on_launch": true,
            "owner_id": "497376193506",
            "tags": {
              "Environment": "stage",
              "Name": "terraform_pub_subnet1"
            },
            "vpc_id": "vpc-01ea2db41573db261"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:497376193506:subnet/subnet-0d9127414eef6eb46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.64/26",
            "id": "subnet-0d9127414eef6eb46",
            "map_public_ip_on_launch": false,
            "owner_id": "497376193506",
            "tags": {
              "Environment": "stage",
              "Name": "terraform_priv_subnet1"
            },
            "vpc_id": "vpc-01ea2db41573db261"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:497376193506:subnet/subnet-0b47dd2cc3549812a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.128/26",
            "id": "subnet-0b47dd2cc3549812a",
            "map_public_ip_on_launch": true,
            "owner_id": "497376193506",
            "tags": {
              "Environment": "stage",
              "Name": "terraform_pub_subnet2"
            },
            "vpc_id": "vpc-01ea2db41573db261"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:497376193506:subnet/subnet-0190e32320196d99e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.192/26",
            "id": "subnet-0190e32320196d99e",
            "map_public_ip_on_launch": false,
            "owner_id": "497376193506",
            "tags": {
              "Environment": "stage",
              "Name": "terraform_priv_subnet2"
            },
            "vpc_id": "vpc-01ea2db41573db261"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:497376193506:vpc/vpc-01ea2db41573db261",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0d0a0de81886c8929",
            "default_route_table_id": "rtb-0e1ca56b630c305e4",
            "default_security_group_id": "sg-089fe6681e9e8b343",
            "dhcp_options_id": "dopt-f0be709b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01ea2db41573db261",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e1ca56b630c305e4",
            "owner_id": "497376193506",
            "tags": {
              "Environment": "stage",
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}